<resources>
    <string name="app_name">FreeYourStuff</string>
    <string name="action_settings">Settings</string>
    <string name="activity_details">Item details</string>
    <string name="activity_add_item">Add item</string>
    <string name="add_item_text">Add your item</string>
    <string name="give">GIVE</string>
    <string name="need">NEED</string>
    <string name="label_summary">Summary</string>
    <string name="label_user">User</string>
    <string name="label_description">Description</string>
    <string name="button_new_item">Submit item</string>
</resources>
